# Cinema_Async_API

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
AsyncApi/: .env.example  Dockerfile  main.py  pyproject.toml
AsyncApi/src/: backoff.py  config.py  errorhandler.py  schemas.py  strings.py
AsyncApi/src/api/: __init__.py
AsyncApi/src/api/v1/: __init__.py  film_work.py  genre.py  kafka.py  person.py  welcome.py
AsyncApi/src/database/: elastic.py  kafka.py  redis.py
AsyncApi/src/services/: service.py
AsyncApi/src/services/ElasticSearch/: converters.py  repositories.py
AsyncApi/src/services/Kafka/: event_producer.py  event_sendler.py
AsyncApi/src/services/Redis/: converters.py  repositories.py
AsyncApi/src/tokens/: tokens.py
AsyncApi/tests/functional/: conftest.py  helpers.py  settings.py
AsyncApi/tests/functional/src/: test_films.py  test_genre.py  test_person.py
AsyncApi/tests/functional/testdata/: films.py  genres.py  person_testdata.json  persons.py
AsyncApi/tests/functional/utils/: create_schemas.py  delete_schemas.py  index.py  wait_for_es.py  wait_for_redis.py
etl/: .env.example  Dockerfile  config.py  constants.py  loader.py  main.py  pyproject.toml  schemas.py  state.py
nginx_settings/: site.nginx
